# gengine

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODOS  gengine.code-workspace  settings.ini
resources/: gengine.icns
resources/shaders/: temp.frag  temp.vert
scripts/: launch.sh
src/: main.cpp
src/engine/: DEFINITIONS.hpp  globals.hpp
src/engine/core/asset/: AssetManager.cpp  AssetManager.hpp
src/engine/core/audio/: AudioManager.cpp  AudioManager.hpp
src/engine/core/gfx/: BlockRenderer.cpp  BlockRenderer.hpp  Cube.cpp  Cube.hpp  ImageLoader.cpp  ImageLoader.hpp  RenderManager.cpp  RenderManager.hpp  Shader.cpp  Shader.hpp
src/engine/core/gfx/device/: Device.cpp  Device.hpp
src/engine/core/gfx/swapChain/: SwapChain.cpp  SwapChain.hpp
src/engine/core/gfx/window/: Window.cpp  Window.hpp
src/engine/core/input/: InputManager.cpp  InputManager.hpp
src/engine/core/object/: Entity.hpp  GameObject.hpp  Hud.cpp  Hud.hpp  HudObject.cpp  HudObject.hpp  InGameObject.cpp  InGameObject.hpp  ObjectManager.hpp
src/engine/core/object/hud/elements/: Button.cpp  Button.hpp  GameRectangle.cpp  GameRectangle.hpp  Label.cpp  Label.hpp  LabeledDropDown.cpp  LabeledDropDown.hpp  LabeledOption.hpp
src/engine/core/save/: SaveGameManager.cpp  SaveGameManager.hpp  SettingsLoader.cpp  SettingsLoader.hpp
src/engine/core/state/: State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/engine/core/window/: WindowManager.cpp  WindowManager.hpp
src/engine/core/world/: BlockTypes.hpp  Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
src/engine/core/world/generator/: CaveGenerator.cpp  CaveGenerator.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/engine/core/world/loader/: WorldLoader.cpp  WorldLoader.hpp
src/engine/game/: Game.cpp  Game.hpp  GameComponents.hpp
src/engine/gameManager/: GameData.hpp  GameManager.cpp  GameManager.hpp
src/engine/game_manager/: GameManager.hpp
src/engine/utils/: window.cpp  window.hpp
src/gameObjects/hud/game/: GameButton.cpp  GameButton.hpp
src/gameObjects/hud/mainMenu/: MainMenuButton.cpp  MainMenuButton.hpp
src/gameObjects/hud/options/: OptionsContainer.cpp  OptionsContainer.hpp
src/gameObjects/player/: Player.cpp  Player.hpp  TestPlayer.cpp  TestPlayer.hpp
src/states/: BaseState.cpp  BaseState.hpp
src/states/default/: BaseState.cpp  BaseState.hpp
src/states/default/mainMenu/: MainMenuState.cpp  MainMenuState.hpp
src/states/default/options/: OptionsState.cpp  OptionsState.hpp
src/states/default/quit/: QuitState.cpp  QuitState.hpp
src/states/default/splash/: SplashState.cpp  SplashState.hpp
src/states/game/: BaseGameState.cpp  BaseGameState.hpp  GameSetupState.cpp  GameSetupState.hpp  GameState.cpp  GameState.hpp  TestGameState.cpp  TestGameState.hpp
